--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
 
-    <div>Текущие пользователи на сайте: <span id="userCount">0</span></div>
+<span class="span-cmd"><div>Текущие пользователи на сайте: <span id="userCount">2</span></div></span>
 
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
