--- a/index.html
+++ b/index.html
@@ -13,8 +13,25 @@
 
   </head>
   <body>
+    <!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+  (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+  m[i].l=1*new Date();
+  for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+  k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+  (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-<span class="span-cmd"><div>Текущие пользователи на сайте: <span id="userCount">2</span></div></span>
+  ym(99129789, "init", {
+       clickmap:true,
+       trackLinks:true,
+       accurateTrackBounce:true
+  });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/99129789" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
+
+
+<span class="span-cmd"><div>Текущие пользователи на сайте: <span id="userCount">1</span></div></span>
 
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
